--- a/hover/index.html
+++ b/hover/index.html
@@ -22,6 +22,6 @@
       </ul>
    
       <p>Абзац с текстом был добавлен для демонстрации того, что при открытии подпунктов меню они будут скрывать часть контента, а не сдвигать его.</p>
-   
+    <h1>HELLO WORLD!</h1>
 </body>
 </html>
